chg: refactor www-server in order to distinguish between generic server and junkie specific pages.

--- a/guile/junkie/www/static_files/junkie.css
+++ b/guile/junkie/www/static_files/junkie.css
@@ -18,7 +18,7 @@ body {
 
 div#title {
 	height: 64px;
-	background: #FF6600 url("/logo.png") no-repeat left;
+	background: #FFCC66 url("/logo.png") no-repeat left;
 	border-width: 0 0 3px 0;
 	border-style: solid;
 	border-color: white;
